# dewalt

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: build_and_push.yml
assets/: style.css
data/: dewalt_angle_grinders.json  dewalt_circular_saws.json  dewalt_cut_out_tools.json  dewalt_drill_drivers.json  dewalt_finish_brad_nailers.json  dewalt_hammer_drills.json  dewalt_impact_drivers.json  dewalt_impact_wrenches.json  dewalt_miter_saws.json  dewalt_oscillating_multi_tools.json  dewalt_ratchets.json  dewalt_rotary_hammers.json  dewalt_table_saws.json  dewalt_vacuums.json
dewalt/: data.py  scrape.py
dewalt/tool_families/: __init__.py  base.py
dewalt/tool_families/angle_grinders/: config.py
dewalt/tool_families/circular_saws/: config.py  scrape.py
dewalt/tool_families/cut_out_tools/: config.py  scrape.py
dewalt/tool_families/drill_drivers/: config.py  scrape.py
dewalt/tool_families/finish_brad_nailers/: config.py  scrape.py
dewalt/tool_families/hammer_drills/: config.py  scrape.py
dewalt/tool_families/impact_drivers/: config.py  scrape.py
dewalt/tool_families/impact_wrenches/: config.py  scrape.py
dewalt/tool_families/miter_saws/: config.py  scrape.py
dewalt/tool_families/oscillating_multi_tools/: config.py  scrape.py
dewalt/tool_families/ratchets/: config.py  scrape.py
dewalt/tool_families/rotary_hammers/: config.py  scrape.py
dewalt/tool_families/table_saws/: config.py  scrape.py
dewalt/ui/: __init__.py  callbacks.py  config.py  context.py  formatting.py  grids.py  layout.py  modal.py
(+2 files in other folders)
